--- a/src/main/resources/templates/thymeleafEx04.html
+++ b/src/main/resources/templates/thymeleafEx04.html
@@ -17,9 +17,19 @@
     </tr>
     </thead>
     <tbody>
+    <!--    <tr th:each="itemDto, status:${itemDtoList}">-->
+    <!--        <td th:if="${status.even}" th:text="Even"></td>-->
+    <!--        <td th:unless="${status.even}" th:text="Odd"></td>-->
+    <!--        <td th:text="${itemDto.itemNm}"></td>-->
+    <!--        <td th:text="${itemDto.itemDetail}"></td>-->
+    <!--        <td th:text="${itemDto.price}"></td>-->
+    <!--        <td th:text="${itemDto.regTime}"></td>-->
+    <!--    </tr>-->
     <tr th:each="itemDto, status:${itemDtoList}">
-        <td th:if="${status.even}" th:text="Even"></td>
-        <td th:unless="${status.even}" th:text="Odd"></td>
+        <td th:switch="${status.even}">
+            <span th:case=true>Even</span>
+            <span th:case=false>Odd</span>
+        </td>
         <td th:text="${itemDto.itemNm}"></td>
         <td th:text="${itemDto.itemDetail}"></td>
         <td th:text="${itemDto.price}"></td>
