--- a/src/main/resources/templates/thymeleafEx/thymeleafEx06.html
+++ b/src/main/resources/templates/thymeleafEx/thymeleafEx06.html
@@ -5,8 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Parameter deliver Ex</h1>
+<h1>파라미터 전달 예제</h1>
 <div th:text="${param1}"></div>
 <div th:text="${param2}"></div>
+
 </body>
 </html>
